# svc-shader

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  cloudbuild.yaml  image.sh  run.sh  service.sh  service_esp.yaml  service_k8s.yaml  svc_shader_esp.yaml  svc_shader_k8s.yaml
proto/: common.proto  dxc.proto  endpoints.bat  endpoints.sh  fxc.proto  rga.proto  service.pb  service.proto  shaderc.proto  sign.proto  spirv_as.proto  spirv_cross.proto  spirv_dis.proto  svc_shader.pb
schema/: generate.bat  generate.sh  svc_shader.fbs  svc_shader_generated.h  svc_shader_generated.rs
src/: encoding.rs  error.rs  identity.rs  includes.rs  lib.rs  utilities.rs
src/client/: mod.rs  transport.rs
src/compile/: content.rs  jobs.rs  manifest.rs  mod.rs  utilities.rs
src/drivers/: dxc.rs  fxc.rs  mod.rs  rga.rs  shaderc.rs  signing.rs  smolv.rs  spirv_as.rs  spirv_cross.rs  spirv_dis.rs  spirv_val.rs
tests/: manifest.toml  manifest2.toml
tests/data/: closest_hit.hlsl
tests/data/CodeGenHLSL/: AddUint64.hlsl  AddUint64Odd.hlsl  BasicHLSL11_PS.hlsl  BasicHLSL11_PS2.hlsl  BasicHLSL11_PS3.hlsl  BasicHLSL11_VS.hlsl  BasicHLSL11_VS2.hlsl  BigStructInBuffer.hlsl  EmptyStructInBuffer.hlsl  FloatMaxtessfactorHs.hlsl  GetDimCalcLOD.hlsl  Include.hlsl  InnerCoverage.hlsl  InnerCoverage2.hlsl  IntegerDepth.hlsl  IntegerDepth2.hlsl  MatArrayOutput.hlsl  MatArrayOutput2.hlsl  NonUniform.hlsl  PatchLength1.hlsl  RValSubscript.hlsl  RaceCond.hlsl  RaceCond2.hlsl  SamplerKind.hlsl  SimpleDs1.hlsl  SimpleGS1.hlsl  SimpleGS10.hlsl  SimpleGS11.hlsl  SimpleGS12.hlsl  SimpleGS2.hlsl  SimpleGS3.hlsl  SimpleGS4.hlsl  SimpleGS5.hlsl  SimpleGS6.hlsl  SimpleGS7.hlsl  SimpleGS8.hlsl  SimpleGS9.hlsl  SimpleHs1.hlsl  SimpleHs10.hlsl  SimpleHs11.hlsl  (+497 more)
tests/data/CodeGenHLSL/Samples/: d12_dynamic_indexing_pixel.hlsl  d12_execute_indirect_cs.hlsl  d12_multithreading_ps.hlsl  d12_multithreading_vs.hlsl  d12_nBodyGravityCS.hlsl
tests/data/CodeGenHLSL/inc/: header.hlsli
tests/data/CodeGenHLSL/quick-test/: NoInputPatchHs.hlsl  assignCast.hlsl  atomic_cast.hlsl  atomic_cast1.hlsl  cb_array.hlsl  cbuffer_default_val.hlsl  check_status.hlsl  check_status2.hlsl  check_status3.hlsl  const_init.hlsl  constant_cast.hlsl  convergent.hlsl  empty_struct.hlsl  empty_struct2.hlsl  field_mat_copy.hlsl  flat_addrspacecast.hlsl  fn_attr_experimental.hlsl  gep_phi.hlsl  iabs.hlsl  immSel.hlsl  incomp_array.hlsl  int_const_init.hlsl  isfrontface.hlsl  isfrontface2.hlsl  local_res_fail_map_error_msg.hlsl  mad_opt.hlsl  mad_opt2.hlsl  mad_opt3.hlsl  mat_transpose.hlsl  mat_transpose_2.hlsl  noinline.hlsl  precise.hlsl  res_select.hlsl  signature_dbg_info.hlsl  vecCombineSel.hlsl  vec_imm_sqrt.hlsl  vec_uint_shr.hlsl  vector-matrix-binops.hlsl  void-param.hlsl
tests/data/CodeGenHLSL/shader-compat-suite/: ignore_line_directives.hlsl  in_out.hlsl  inout_subscript.hlsl  lib_no_flat_extern_func.hlsl  lib_out_param_res.hlsl  lib_res_sel.hlsl  (+8 more)
tests/data/CodeGenSPIRV/: attribute.domain.isoline.hlsl  attribute.domain.quad.hlsl  attribute.domain.tri.hlsl  attribute.earlydepthstencil.ps.hlsl  attribute.instance.gs.hlsl  attribute.instance.missing.gs.hlsl  attribute.max-vertex-count.hlsl  attribute.numthreads.hlsl  attribute.numthreads.missing.hlsl  attribute.outputcontrolpoints.hlsl  attribute.outputtopology.point.hlsl  attribute.outputtopology.triangle-ccw.hlsl  attribute.outputtopology.triangle-cw.hlsl  attribute.partitioning.fractional-even.hlsl  attribute.partitioning.fractional-odd.hlsl  attribute.partitioning.integer.hlsl  bezier.domain.hlsl2spv  bezier.hull.hlsl2spv  bezier_common_hull.hlsl  binary-op.arith-assign.matrix.hlsl  binary-op.arith-assign.mixed.form.hlsl  binary-op.arith-assign.mixed.type.hlsl  binary-op.arith-assign.scalar.hlsl  binary-op.arith-assign.vector.hlsl  binary-op.arithmetic.matrix.hlsl  binary-op.arithmetic.mixed.hlsl  binary-op.arithmetic.scalar.hlsl  binary-op.arithmetic.vector.hlsl  binary-op.assign.composite.hlsl  binary-op.assign.hlsl  binary-op.assign.image.hlsl  binary-op.assign.opaque.array.hlsl  binary-op.bitwise-assign.scalar.hlsl  binary-op.bitwise-assign.shift-left.hlsl  binary-op.bitwise-assign.shift-right.hlsl  binary-op.bitwise-assign.vector.hlsl  binary-op.bitwise.scalar.hlsl  binary-op.bitwise.shift-left.hlsl  binary-op.bitwise.shift-right.hlsl  binary-op.bitwise.vector.hlsl  (+500 more)
(+221 files in other folders)
