[package]
name = "svc-shader"
version = "0.8.2"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
description = "A gRPC micro-service  that exposes a variety of GPU shader compilers under a common cloud-based abstraction."
homepage = "https://github.com/gwihlidal/svc-shader"
repository = "https://github.com/gwihlidal/svc-shader"
readme = "README.md"
keywords = ["grpc", "shader", "compile", "gpu", "pipeline"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
hostname = "0.1"
rand = "0.6.5"
env_logger = "0.6.0"
log = "0.4.6"
regex = "1.1.2"
glob = "0.2"
notify = "4.0.9"
serde = "1.0"
serde_yaml = "0.8.8"
serde_json = "1.0"
toml = "0.4.10"
normalize-line-endings = "0.3.0"
clap = "2.32"
serde_derive = "1.0.89"
lazy_static = "1.3.0"
sha2 = "0.8.0"
filebuffer = "0.4.0"
crossbeam-deque = "0.7.1"
h2 = "0.1.16"
tokio = "0.1"
tokio-connect = { git = "https://github.com/carllerche/tokio-connect" }
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-http = { git = "https://github.com/tower-rs/tower-http" }
tower-util = { git = "https://github.com/tower-rs/tower" }
futures = "0.1.25"
futures-cpupool = "0.1.8"
bytes = "0.4.11"
prost = "0.4.0"
prost-derive = "0.4.0"
prost-types = "0.4.0"
failure = "0.1.5"
uuid = { version = "0.7", features = ["v4"] }
bincode = "1.1.2"
dotenv = "0.13.0"
cfg-if = "0.1.7"
scoped_threadpool = "0.1.9"
chashmap = "2.2.2"
file_tree = "0.1.0"
yansi = "0.5.0"
petgraph = "0.4.13"
ptree = "0.2.1"
include-merkle = "0.1.4"
byteorder = "1.3.1"
twox-hash = "1.1.2"
fern = "0.5.7"
chrono = "0.4.6"
structopt = "0.2"
flatbuffers = "0.5.0"
smush = "0.1.4"
elapsed = "0.1.2"

[target.'cfg(windows)'.dependencies]
hassle-rs = { git = "https://github.com/gwihlidal/hassle-rs.git" }

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc" }

[[bin]]
name = "compile"
path = "src/bin/compile/main.rs"
test = false

[[bin]]
name = "service"
path = "src/bin/service/main.rs"
test = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1